welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:7: error: not found: value GetY
      setPos(GetY()+1,getMondeHauteur()-1)
             ^Diagonal:10: error: not found: value GetX
        setPos(0,GetX()+1)
                 ^Diagonal:12: error: not found: value GetX
        setPos (GetX()+1,GetY()-1)
                ^Diagonal:12: error: not found: value GetY
        setPos (GetX()+1,GetY()-1)
                         ^